# autods-agent

./: .gitignore  README.md  __init__.py  lab.ipynb  main.py  pyproject.toml  requirements.txt
agents/: __init__.py  data_agent.py  insight_agent.py  ml_agent.py
api/: app.py
notebooks/: demo.ipynb
pipelines/: __init__.py  analyze.py  eda_pipeline.py  train.py  training_pipeline.py
utils/: __init__.py  data_loader.py  visualization.py
